# Skillguard

./: .gitignore  README.md
SkillsGuardApp/: .gitignore  README.md  pyproject.toml
SkillsGuardApp/sgscanner/: __init__.py  exceptions.py  loader.py
SkillsGuardApp/sgscanner/api/: __init__.py  api.py  api_cli.py  api_server.py  router.py
SkillsGuardApp/sgscanner/cli/: cli.py
SkillsGuardApp/sgscanner/config/: __init__.py  config.py  config_parser.py  constants.py  yara_modes.py
SkillsGuardApp/sgscanner/engines/: __init__.py  aidefense.py  base.py  cross_skill.py  dataflow.py  description.py  llm_engine.py  meta.py  pattern.py  registry.py  static_config.py  virustotal.py
SkillsGuardApp/sgscanner/hooks/: __init__.py  pre_commit.py
SkillsGuardApp/sgscanner/llm/: __init__.py  client.py
SkillsGuardApp/sgscanner/models/: __init__.py
SkillsGuardApp/sgscanner/pipeline/: __init__.py  orchestrator.py
SkillsGuardApp/sgscanner/reports/: __init__.py  json_reporter.py  markdown_reporter.py  sarif_reporter.py  table_reporter.py
SkillsGuardApp/sgscanner/rules/: patterns.py  yara_scanner.py
SkillsGuardApp/sgscanner/static_analysis/: __init__.py  context_extractor.py
SkillsGuardApp/sgscanner/taxonomy/: __init__.py  ai_taxonomy.py  threat_map.py
SkillsGuardApp/sgscanner/utils/: __init__.py  command_utils.py  (+4 more)
SkillsGuardApp/skillguard/: cli.py  deep_scan.py  models.py  reporter.py  scanner.py  scoring.py
SkillsGuardCLI/: README.md  pyproject.toml
SkillsGuardCLI/skillguard/: __init__.py  cli.py  loader.py  models.py  reporter.py  scanner.py  scoring.py
(+64 files in other folders)
