[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "skillsguard"
version = "2.0.0"
description = "Pre-install security scanner with deep AI skill analysis"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
llm = ["litellm>=1.0", "openai>=1.0"]
all = ["litellm>=1.0", "openai>=1.0"]

[project.scripts]
skillguard = "skillguard.cli:main"

[tool.setuptools.packages.find]
include = ["skillguard*", "sgscanner*"]
